Modify extrinsic configuration for AUGUSTUS
Updated configuration file to integrate Repeat, Protein, and cDNA hints, with modifications by Y. W. Kawaguchi.

--- a/extrinsic.M.RM.E.P.cfg
+++ b/extrinsic.M.RM.E.P.cfg
@@ -1,3 +1,15 @@
+# Modified from: extrinsic.cfg (AUGUSTUS sample configuration)
+# Purpose: integrate Repeat / Protein / cDNA hints
+# Changes by: Y. W. Kawaguchi (2025)
+#
+# SPDX-License-Identifier: Artistic-2.0
+# Copyright (C) The AUGUSTUS authors
+# Additional modifications Copyright (C) 2025 Yawako W. Kawaguchi
+#
+# This file is a derivative of an AUGUSTUS sample configuration and is
+# distributed under the Artistic License 2.0.
+# See LICENSES/Artistic-2.0.txt and the AUGUSTUS project for details.
+
 # extrinsic information configuration file for AUGUSTUS																									
 #																									
 # include with --extrinsicCfgFile=filename																									
@@ -55,4 +67,5 @@ nonexonpart      1          1  M    1  1e+100  RM  1     1.15 E 1    1    P 1 1
 																									
 #																									
 # Explanation: see original extrinsic.cfg file																			
+
 #
